Fix package autodiscovery issue
This can prevent users from pip installing kayobe-config if they have
extra directories in the root of the repository. I've chosen not to
define any packages as there is no python component to this config
repository; it just provides a mechanism to install additional
dependencies.

Change-Id: Id358fb360ff1f9f640404146dcdf64e46b8c099f
Closes-Bug: #2070038

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,6 @@ classifier =
     Intended Audience :: System Administrators
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
+
+[options]
+packages =
